src/tests/test-src/errors/E89-fn-ptr-array.syntran
// E89: fn-ptr-array
// Arrays of fn pointers are not supported

fn dbl(n: i32): i32
{
	return 2 * n;
}

let a = [dbl, dbl];
